[Birajit] Refactor: .gitignore file is updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .idea
 main.py
+com/bridgelabz/quantitymeasurement_test/__pycache__/
+com/bridgelabz/quantitymeasurement/__pycache__/
+com/bridgelabz/__pycache__/
+com/__pycache__/
